--- a/libtermui/Makefile
+++ b/libtermui/Makefile
@@ -10,10 +10,14 @@ objs += src/getline.o src/getline_complete.o src/getline_edit.o	\
 endif
 
 ifeq ($(CONFIG_LIBTERMUI_CONSOLE), defined)
-objs += src/console_builtin.o src/console.o src/console_complete.o	\
-	src/console_entries.o src/console_parse.o			\
-	src/console_process.o
+objs += src/console_builtin.o src/console.o src/console_process.o \
+	src/console_entries.o src/console_parse.o \
+        src/console_opt_integer.o src/console_opt_enum.o
+ifeq ($(CONFIG_LIBTERMUI_CON_COMPLETION), defined)
+objs += src/console_complete.o
 endif
+endif
+
 
 DIR_CFLAGS=-I $(LOCAL_SRC_DIR)
 
