--- a/libtermui/termui.config
+++ b/libtermui/termui.config
@@ -29,10 +29,16 @@
   default defined
 %config end
 
+%config CONFIG_LIBTERMUI_CON_HELP
+  desc Retains long help strings
+  parent CONFIG_LIBTERMUI_CONSOLE
+  default defined
+%config end
+
 %config CONFIG_LIBTERMUI_CON_LONG_HELP
   desc Retains long help strings
-  suggest_when CONFIG_COMPILE_OPTIMIZE=s
   parent CONFIG_LIBTERMUI_CONSOLE
+  depend CONFIG_LIBTERMUI_CON_HELP
   default defined
 %config end
 
@@ -53,6 +59,20 @@
 %config CONFIG_LIBTERMUI_CON_MAXLINELEN
   desc Console line buffer size
   default 512
+  parent CONFIG_LIBTERMUI_CONSOLE
+  flags value
+%config end
+
+%config CONFIG_LIBTERMUI_CON_MAXARGS
+  desc Console max number of command arguments
+  default 32
+  parent CONFIG_LIBTERMUI_CONSOLE
+  flags value
+%config end
+
+%config CONFIG_LIBTERMUI_CON_MAXOPTS
+  desc Console max number of options
+  default 29
   parent CONFIG_LIBTERMUI_CONSOLE
   flags value
 %config end
