added some device shell stuff

--- a/libdevice/device.config
+++ b/libdevice/device.config
@@ -354,3 +354,10 @@
   desc Enable PWM devices support
 %config end
 
+%config CONFIG_DEVICE_SHELL
+  parent CONFIG_DEVICE
+  depend CONFIG_MUTEK_SHELL
+  when CONFIG_MUTEK_SHELL
+  desc Enable device related commands in the shell
+%config end
+
