libc: fix missing parent on CONFIG_LIBC_VFS

--- a/libc/libc.config
+++ b/libc/libc.config
@@ -59,6 +59,7 @@
 
 %config CONFIG_LIBC_VFS
   desc Enable C library file related functions
+  parent CONFIG_LIBC
   depend CONFIG_VFS
 %config end
 
