rewrite of the memory device class

--- a/libdevice/Makefile
+++ b/libdevice/Makefile
@@ -7,7 +7,7 @@ doc_headers =  device/device.h  device/driver.h device/irq.h device/resources.h 
 	device/class/icu.h device/class/net.h device/class/cpu.h	\
 	device/class/timer.h device/class/dma.h
 
-enum_headers = device/driver.h device/device.h
+enum_headers = device/driver.h device/device.h device/class/mem.h
 
 objs = driver.o device.o resources.o init.o
 
@@ -62,6 +62,13 @@ ifeq ($(CONFIG_DEVICE_CLOCK), defined)
 objs += device_clock.o
 ifeq ($(CONFIG_DEVICE_SHELL), defined)
 objs += shell_clock.o
+endif
+endif
+
+ifeq ($(CONFIG_DEVICE_MEM), defined)
+objs += device_mem.o
+ifeq ($(CONFIG_DEVICE_SHELL), defined)
+objs += shell_mem.o
 endif
 endif
 
