updated the soclib block device driver to use the new memory class instead of the block class

--- a/arch/soclib/drivers/vci_block_device/block.config
+++ b/arch/soclib/drivers/vci_block_device/block.config
@@ -2,7 +2,7 @@
 %config CONFIG_DRIVER_SOCLIB_VCI_BLOCK_DEVICE
   desc Enable SoCLib VciBlockDevice component driver
   parent CONFIG_ARCH_SOCLIB
-  depend CONFIG_DEVICE_BLOCK
+  depend CONFIG_DEVICE_MEM
   depend CONFIG_DEVICE_IRQ
 %config end
 
