mutek: Add generic config tokens for early console
Set device address and baud rate globally, it is up to drivers
to register their own init tokens.

--- a/arch/atmel/Makefile
+++ b/arch/atmel/Makefile
@@ -2,7 +2,7 @@
 objs =											\
 arch_init.o										\
 
-ifeq ($(CONFIG_MUTEK_EARLY_CONSOLE),defined)
+ifeq ($(CONFIG_MUTEK_PRINTK),defined)
 objs += early_console.o
 endif
 
