--- a/arch/atmel/atmel.config
+++ b/arch/atmel/atmel.config
@@ -13,38 +13,31 @@
 %init end
 
 
-%config CONFIG_ATMEL_EARLY_CONSOLE_AVR32_SIM
+%config CONFIG_ATMEL_PRINTK_AVR32_SIM
   desc Atmel early console output uses write syscall of the avr32 simulator
   parent CONFIG_ARCH_ATMEL
-  provide CONFIG_MUTEK_EARLY_CONSOLE
-  exclude CONFIG_ATMEL_EARLY_CONSOLE_USART
+  provide CONFIG_MUTEK_PRINTK_HANDLER
+  exclude CONFIG_ATMEL_PRINTK_USART
 %config end
 
-%init INIT_ATMEL_EARLY_CONSOLE_AVR32_SIM
-  parent CONFIG_ATMEL_EARLY_CONSOLE_AVR32_SIM
-  during INIT_MUTEK_EARLY_CONSOLE
+%init INIT_ATMEL_PRINTK_AVR32_SIM
+  parent CONFIG_ATMEL_PRINTK_AVR32_SIM
+  during INIT_MUTEK_PRINTK
   function atmel_early_console_avr32sim_init
 %init end
 
 
 
-%config CONFIG_ATMEL_EARLY_CONSOLE_USART
+%config CONFIG_ATMEL_PRINTK_USART
   desc Atmel early console output uses an USART device
   parent CONFIG_ARCH_ATMEL
-  provide CONFIG_MUTEK_EARLY_CONSOLE
-  exclude CONFIG_ATMEL_EARLY_CONSOLE_AVR32_SIM
+  provide CONFIG_MUTEK_PRINTK_HANDLER
+  exclude CONFIG_ATMEL_PRINTK_AVR32_SIM
 %config end
 
-%config CONFIG_ATMEL_EARLY_CONSOLE_USART_ADDR
-  desc Address of the Atmel USART used for early console output
-  parent CONFIG_ATMEL_EARLY_CONSOLE_USART
-  flags value
-  default 0xffe00c00
-%config end
-
-%init INIT_ATMEL_EARLY_CONSOLE_USART
-  parent CONFIG_ATMEL_EARLY_CONSOLE_USART
-  during INIT_MUTEK_EARLY_CONSOLE
+%init INIT_ATMEL_PRINTK_USART
+  parent CONFIG_ATMEL_PRINTK_USART
+  during INIT_MUTEK_PRINTK
   function atmel_early_console_usart_init
 %init end
 
