--- a/arch/efm32/efm32.config
+++ b/arch/efm32/efm32.config
@@ -55,80 +55,73 @@
   provide CONFIG_EFM32_FLASH_PAGE_SIZE=12
 %config end
 
-%config CONFIG_EFM32_EARLY_CONSOLE_LEUART_ADDR
-  desc Address of the EFM32 UART used for early console output
-  parent CONFIG_ARCH_EFM32
-  default 0x40084000
-  flags value
-%config end
-
 %config CONFIG_EFM32_G8XX_STK
   desc Efm32 support for G8xx gecko starter kit
   parent CONFIG_ARCH_EFM32
-  provide CONFIG_MUTEK_EARLY_CONSOLE
-  require CONFIG_EFM32_EARLY_CONSOLE_LEUART_ADDR
+  provide CONFIG_MUTEK_PRINTK_HANDLER
+  require CONFIG_MUTEK_PRINTK_ADDR
   depend CONFIG_EFM32_GECKO
 %config end
 
-%init INIT_EFM32_EARLY_CONSOLE_LEUART_G8XX_STK
+%init INIT_EFM32_PRINTK_LEUART_G8XX_STK
   parent CONFIG_EFM32_G8XX_STK
-  during INIT_MUTEK_EARLY_CONSOLE
+  during INIT_MUTEK_PRINTK
   function efm32_early_console_leuart_init
 %init end
 
 %config CONFIG_EFM32_STK3200
   desc Efm32 support for STK3200 zero gecko starter kit
   parent CONFIG_ARCH_EFM32
-  provide CONFIG_MUTEK_EARLY_CONSOLE
-  require CONFIG_EFM32_EARLY_CONSOLE_LEUART_ADDR
+  provide CONFIG_MUTEK_PRINTK_HANDLER
+  require CONFIG_MUTEK_PRINTK_ADDR
   depend CONFIG_EFM32_ZERO_GECKO
 %config end
 
-%init INIT_EFM32_EARLY_CONSOLE_LEUART_STK3200
+%init INIT_EFM32_PRINTK_LEUART_STK3200
   parent CONFIG_EFM32_STK3200
-  during INIT_MUTEK_EARLY_CONSOLE
+  during INIT_MUTEK_PRINTK
   function efm32_early_console_leuart_init
 %init end
 
 %config CONFIG_EFM32_STK3600
   desc Efm32 support for STK3600 leopard gecko starter kit
   parent CONFIG_ARCH_EFM32
-  provide CONFIG_MUTEK_EARLY_CONSOLE
-  require CONFIG_EFM32_EARLY_CONSOLE_LEUART_ADDR
+  provide CONFIG_MUTEK_PRINTK_HANDLER
+  require CONFIG_MUTEK_PRINTK_ADDR
   depend CONFIG_EFM32_LEOPARD_GECKO
 %config end
 
-%init INIT_EFM32_EARLY_CONSOLE_LEUART_STK3600
+%init INIT_EFM32_PRINTK_LEUART_STK3600
   parent CONFIG_EFM32_STK3600
-  during INIT_MUTEK_EARLY_CONSOLE
+  during INIT_MUTEK_PRINTK
   function efm32_early_console_leuart_init
 %init end
 
 %config CONFIG_EFM32_STK3800
   desc Efm32 support for STK3800 Wonder gecko starter kit
   parent CONFIG_ARCH_EFM32
-  provide CONFIG_MUTEK_EARLY_CONSOLE
-  require CONFIG_EFM32_EARLY_CONSOLE_LEUART_ADDR
+  provide CONFIG_MUTEK_PRINTK_HANDLER
+  require CONFIG_MUTEK_PRINTK_ADDR
   depend CONFIG_EFM32_WONDER_GECKO
 %config end
 
-%init INIT_EFM32_EARLY_CONSOLE_LEUART_STK3800
+%init INIT_EFM32_PRINTK_LEUART_STK3800
   parent CONFIG_EFM32_STK3800
-  during INIT_MUTEK_EARLY_CONSOLE
+  during INIT_MUTEK_PRINTK
   function efm32_early_console_leuart_init
 %init end
 
 %config CONFIG_EFM32_STK3700
   desc Efm32 support for STK3700 Giant gecko starter kit
   parent CONFIG_ARCH_EFM32
-  provide CONFIG_MUTEK_EARLY_CONSOLE
-  require CONFIG_EFM32_EARLY_CONSOLE_LEUART_ADDR
+  provide CONFIG_MUTEK_PRINTK_HANDLER
+  require CONFIG_MUTEK_PRINTK_ADDR
   depend CONFIG_EFM32_GIANT_GECKO
 %config end
 
-%init INIT_EFM32_EARLY_CONSOLE_LEUART_STK3700
+%init INIT_EFM32_PRINTK_LEUART_STK3700
   parent CONFIG_EFM32_STK3700
-  during INIT_MUTEK_EARLY_CONSOLE
+  during INIT_MUTEK_PRINTK
   function efm32_early_console_leuart_init
 %init end
 
