--- a/arch/emu/emu.config
+++ b/arch/emu/emu.config
@@ -65,15 +65,15 @@
 
 
 
-%config CONFIG_EMU_EARLY_CONSOLE
+%config CONFIG_EMU_PRINTK
   desc enable early text console before device initialization
-  provide CONFIG_MUTEK_EARLY_CONSOLE
+  provide CONFIG_MUTEK_PRINTK_HANDLER
   parent CONFIG_ARCH_EMU
 %config end
 
-%init INIT_EMU_EARLY_CONSOLE
-  parent CONFIG_EMU_EARLY_CONSOLE
-  during INIT_MUTEK_EARLY_CONSOLE
+%init INIT_EMU_PRINTK
+  parent CONFIG_EMU_PRINTK
+  during INIT_MUTEK_PRINTK
   function emu_early_console_init
 %init end
 
