--- a/arch/ibmpc/Makefile
+++ b/arch/ibmpc/Makefile
@@ -5,7 +5,7 @@ ifeq ($(CONFIG_ARCH_IBMPC_DMA), defined)
 objs += dma-8237.o
 endif
 
-ifeq ($(CONFIG_MUTEK_EARLY_CONSOLE), defined)
+ifeq ($(CONFIG_MUTEK_PRINTK), defined)
 objs += early_console.o
 endif
 
