--- a/arch/ibmpc/ibmpc.config
+++ b/arch/ibmpc/ibmpc.config
@@ -20,38 +20,38 @@
   function ibmpc_start_cpus
 %init end
 
-%config CONFIG_IBMPC_EARLY_CONSOLE_VGA
+%config CONFIG_IBMPC_PRINTK_VGA
   desc Enable early text console before real drivers init.
   desc Text output will be written to vga text buffer at 0xb8000.
-  provide CONFIG_MUTEK_EARLY_CONSOLE
+  provide CONFIG_MUTEK_PRINTK_HANDLER
   parent CONFIG_ARCH_IBMPC
 %config end
 
-%config CONFIG_IBMPC_EARLY_CONSOLE_UART
+%config CONFIG_IBMPC_PRINTK_UART
   desc Enable early text console before real drivers init.
   desc Text output will be sent to 16550 UART.
-  provide CONFIG_MUTEK_EARLY_CONSOLE
+  provide CONFIG_MUTEK_PRINTK_HANDLER
   parent CONFIG_ARCH_IBMPC
 %config end
 
-%config CONFIG_IBMPC_EARLY_CONSOLE_UART_PORT
+%config CONFIG_IBMPC_PRINTK_UART_PORT
   desc Defines early console 16550 UART port address.
-  parent CONFIG_IBMPC_EARLY_CONSOLE_UART
+  parent CONFIG_IBMPC_PRINTK_UART
   flags value
   default 0x3f8
 %config end
 
-%config CONFIG_IBMPC_EARLY_CONSOLE_E9HACK
+%config CONFIG_IBMPC_PRINTK_E9HACK
   desc Enable early text console before real drivers init.
   desc Text output will be written to 0xe9 port, supported by Qemu and Bochs emulators.
-  provide CONFIG_MUTEK_EARLY_CONSOLE
+  provide CONFIG_MUTEK_PRINTK_HANDLER
   parent CONFIG_ARCH_IBMPC
 %config end
 
-%init INIT_IBMPC_EARLY_CONSOLE
+%init INIT_IBMPC_PRINTK
   parent CONFIG_ARCH_IBMPC
-  condition CONFIG_MUTEK_EARLY_CONSOLE
-  during INIT_MUTEK_EARLY_CONSOLE
+  condition CONFIG_MUTEK_PRINTK
+  during INIT_MUTEK_PRINTK
   function ibmpc_early_console_init
 %init end
 
