--- a/arch/raspberry/raspberry.config
+++ b/arch/raspberry/raspberry.config
@@ -13,22 +13,15 @@
   function raspberry_mem_init
 %init end
 
-%config CONFIG_RASPBERRY_EARLY_CONSOLE_UART
+%config CONFIG_RASPBERRY_PRINTK_UART
   desc Raspberry early console output uses an UART device
   parent CONFIG_ARCH_RASPBERRY
-  provide CONFIG_MUTEK_EARLY_CONSOLE
+  provide CONFIG_MUTEK_PRINTK_HANDLER
 %config end
 
-%config CONFIG_RASPBERRY_EARLY_CONSOLE_UART_ADDR
-  desc Address of the Raspberry UART used for early console output
-  parent CONFIG_RASPBERRY_EARLY_CONSOLE_UART
-  flags value
-  default 0x20201000
-%config end
-
-%init INIT_RASPBERRY_EARLY_CONSOLE_UART
-  parent CONFIG_RASPBERRY_EARLY_CONSOLE_UART
-  during INIT_MUTEK_EARLY_CONSOLE
+%init INIT_RASPBERRY_PRINTK_UART
+  parent CONFIG_RASPBERRY_PRINTK_UART
+  during INIT_MUTEK_PRINTK
   function raspberry_early_console_init
 %init end
 
