--- a/arch/soclib/soclib.config
+++ b/arch/soclib/soclib.config
@@ -24,22 +24,16 @@
 
 
 
-%config CONFIG_SOCLIB_EARLY_CONSOLE
+%config CONFIG_SOCLIB_PRINTK
   desc enable SoCLib early console TTY before device initialization
-  provide CONFIG_MUTEK_EARLY_CONSOLE
+  provide CONFIG_MUTEK_PRINTK_HANDLER
   parent CONFIG_ARCH_SOCLIB
-  require CONFIG_SOCLIB_EARLY_CONSOLE_ADDR
+  require CONFIG_MUTEK_PRINTK_ADDR
 %config end
 
-%config CONFIG_SOCLIB_EARLY_CONSOLE_ADDR
-  desc SoCLib early console TTY address
-  parent CONFIG_SOCLIB_EARLY_CONSOLE
-  flags value
-%config end
-
-%init INIT_SOCLIB_EARLY_CONSOLE
-  parent CONFIG_SOCLIB_EARLY_CONSOLE
-  during INIT_MUTEK_EARLY_CONSOLE
+%init INIT_SOCLIB_PRINTK
+  parent CONFIG_SOCLIB_PRINTK
+  during INIT_MUTEK_PRINTK
   function soclib_early_console_init
 %init end
 
