--- a/arch/stm32/stm32.config
+++ b/arch/stm32/stm32.config
@@ -13,24 +13,10 @@
   function stm32_mem_init
 %init end
 
-%config CONFIG_STM32_EARLY_CONSOLE_UART
+%config CONFIG_STM32_PRINTK_UART
   desc STM32 early console output uses an UART device
   parent CONFIG_ARCH_STM32
-  provide CONFIG_MUTEK_EARLY_CONSOLE
-%config end
-
-%config CONFIG_STM32_EARLY_CONSOLE_UART_ADDR
-  desc Address of the STM32 UART used for early console output
-  parent CONFIG_STM32_EARLY_CONSOLE_UART
-  flags value
-  default 0x40004400
-%config end
-
-%config CONFIG_STM32_EARLY_CONSOLE_UART_BAUDRATE
-  desc Address of the STM32 UART used for early console output
-  parent CONFIG_STM32_EARLY_CONSOLE_UART
-  flags value
-  default 115200
+  provide CONFIG_MUTEK_PRINTK_HANDLER
 %config end
 
 %config CONFIG_BOARD_STM32
@@ -52,9 +38,9 @@
   flags value
 %config end
 
-%init INIT_STM32_EARLY_CONSOLE_UART
-  parent CONFIG_STM32_EARLY_CONSOLE_UART
-  during INIT_MUTEK_EARLY_CONSOLE
+%init INIT_STM32_PRINTK_UART
+  parent CONFIG_STM32_PRINTK_UART
+  during INIT_MUTEK_PRINTK
   function stm32_early_console_init
 %init end
 
@@ -62,7 +48,7 @@
   parent CONFIG_ARCH_STM32
   during INIT_BOOTSTRAP
   after INIT_MEMORY_SECTIONS
-  before INIT_STM32_EARLY_CONSOLE_UART
+  before INIT_STM32_PRINTK_UART
   function stm32_freq_scaling_init
 %init end
 
