--- a/arch/zynq/zynq.config
+++ b/arch/zynq/zynq.config
@@ -12,22 +12,15 @@
   function zynq_mem_init
 %init end
 
-%config CONFIG_ZYNQ_EARLY_CONSOLE_UART
+%config CONFIG_ZYNQ_PRINTK_UART
   desc Zynq early console output uses an UART device
   parent CONFIG_ARCH_ZYNQ
-  provide CONFIG_MUTEK_EARLY_CONSOLE
+  provide CONFIG_MUTEK_PRINTK_HANDLER
 %config end
 
-%config CONFIG_ZYNQ_EARLY_CONSOLE_UART_ADDR
-  desc Address of the Zynq UART used for early console output
-  parent CONFIG_ZYNQ_EARLY_CONSOLE_UART
-  flags value
-  default 0xe0001000
-%config end
-
-%init INIT_ZYNQ_EARLY_CONSOLE_UART
-  parent CONFIG_ZYNQ_EARLY_CONSOLE_UART
-  during INIT_MUTEK_EARLY_CONSOLE
+%init INIT_ZYNQ_PRINTK_UART
+  parent CONFIG_ZYNQ_PRINTK_UART
+  during INIT_MUTEK_PRINTK
   function zynq_early_console_init
 %init end
 
