--- a/examples/tinygl_demo/config
+++ b/examples/tinygl_demo/config
@@ -36,9 +36,8 @@ CONFIG_LIBTINYGL_VGAFB
     CONFIG_ROM_ADDR 0x00400000
     CONFIG_ROM_SIZE 0x00100000
 
-    CONFIG_MUTEK_PRINTK_KEEP_EARLY
-    CONFIG_SOCLIB_EARLY_CONSOLE
-    CONFIG_SOCLIB_EARLY_CONSOLE_ADDR 0xd0200000
+    CONFIG_SOCLIB_PRINTK
+    CONFIG_MUTEK_PRINTK_ADDR 0xd0200000
     %set platform_name pf_soclib_tinygl
 
     # Device and drivers
