--- a/mutek/mutek.config
+++ b/mutek/mutek.config
@@ -140,21 +140,6 @@
   function mutek_console_initsmp mutek_console_cleanupsmp
 %init end
 
-%config CONFIG_MUTEK_EARLY_CONSOLE
-  desc Indicate early primitive text console is used at startup
-  parent CONFIG_MUTEK
-  flags meta
-%config end
-
-%init INIT_MUTEK_EARLY_CONSOLE
-  parent CONFIG_MUTEK_EARLY_CONSOLE
-  desc Setup a primitive console output as soon as data sections are setup
-  during INIT_MEMORY
-  after INIT_MEMORY_SECTIONS
-  before INIT_MUTEK_MEMALLOC
-  flags notempty
-%init end
-
 %config CONFIG_MUTEK_SHELL
   parent CONFIG_MUTEK
   desc Enable support for mutek interactive command shell
@@ -179,6 +164,13 @@
   default defined
   parent CONFIG_MUTEK
   depend CONFIG_LIBC_FORMATTER_PRINTF
+  depend CONFIG_MUTEK_PRINTK_HANDLER
+%config end
+
+%config CONFIG_MUTEK_PRINTK_HANDLER
+  desc An implementation for printk output exists
+  parent CONFIG_MUTEK
+  flags meta
 %config end
 
 %config CONFIG_MUTEK_PRINTK_HEXDUMP
@@ -193,11 +185,28 @@
   parent CONFIG_MUTEK_PRINTK
 %config end
 
-%config CONFIG_MUTEK_PRINTK_KEEP_EARLY
-  desc Instruct to keep using early console for printk once a legacy console driver is available
-  parent CONFIG_MUTEK_PRINTK
-  depend CONFIG_MUTEK_EARLY_CONSOLE
+%config CONFIG_MUTEK_PRINTK_ADDR
+  desc Address of the device used for console output
+  parent CONFIG_MUTEK_CONSOLE
+  default 0
+  flags value
 %config end
+
+%config CONFIG_MUTEK_PRINTK_RATE
+  desc Baudrate used for console
+  parent CONFIG_MUTEK_CONSOLE
+  default 115200
+  flags value
+%config end
+
+%init INIT_MUTEK_PRINTK
+  parent CONFIG_MUTEK_PRINTK
+  desc Setup a kernel console output as soon as data sections are setup
+  during INIT_MEMORY
+  after INIT_MEMORY_SECTIONS
+  before INIT_MUTEK_MEMALLOC
+  flags notempty
+%init end
 
 ######################################################################
 #		Vmem
