--- a/arch/gaisler/gaisler.config
+++ b/arch/gaisler/gaisler.config
@@ -24,34 +24,28 @@
 %init end
 
 
-%config CONFIG_GAISLER_EARLY_CONSOLE
+%config CONFIG_GAISLER_PRINTK
   desc enable SoCLib early console TTY before device initialization
-  provide CONFIG_MUTEK_EARLY_CONSOLE
+  provide CONFIG_MUTEK_PRINTK_HANDLER
   parent CONFIG_ARCH_GAISLER
-  require CONFIG_GAISLER_EARLY_CONSOLE_ADDR
+  require CONFIG_MUTEK_PRINTK_ADDR
 %config end
 
-%config CONFIG_GAISLER_EARLY_CONSOLE_ADDR
-  desc Gaisler early console UART address
-  parent CONFIG_GAISLER_EARLY_CONSOLE
-  flags value
-%config end
-
-%config CONFIG_GAISLER_EARLY_CONSOLE_SCALER
+%config CONFIG_GAISLER_PRINTK_SCALER
   desc Gaisler early console UART scaler value
-  parent CONFIG_GAISLER_EARLY_CONSOLE
+  parent CONFIG_GAISLER_PRINTK
   default 0x100
   flags value
 %config end
 
-%config CONFIG_GAISLER_EARLY_CONSOLE_DEBUG
+%config CONFIG_GAISLER_PRINTK_DEBUG
   desc Gaisler UART is configured by debug support unit, do not update control register
-  parent CONFIG_GAISLER_EARLY_CONSOLE
+  parent CONFIG_GAISLER_PRINTK
 %config end
 
-%init INIT_GAISLER_EARLY_CONSOLE
-  parent CONFIG_GAISLER_EARLY_CONSOLE
-  during INIT_MUTEK_EARLY_CONSOLE
+%init INIT_GAISLER_PRINTK
+  parent CONFIG_GAISLER_PRINTK
+  during INIT_MUTEK_PRINTK
   function gaisler_early_console_init
 %init end
 
