--- a/arch/raspberry/Makefile
+++ b/arch/raspberry/Makefile
@@ -2,7 +2,7 @@
 objs =											\
 arch_init.o										\
 
-ifeq ($(CONFIG_MUTEK_EARLY_CONSOLE),defined)
+ifeq ($(CONFIG_MUTEK_PRINTK),defined)
 objs += early_console.o
 endif
 
