--- a/arch/zynq/Makefile
+++ b/arch/zynq/Makefile
@@ -1,7 +1,7 @@
 
 objs =											\
 			 arch_init.o
-ifeq ($(CONFIG_MUTEK_EARLY_CONSOLE),defined)
+ifeq ($(CONFIG_MUTEK_PRINTK),defined)
 objs += early_console.o
 endif
 
