arch/nrf51: Add Clock initialization

--- a/arch/nrf51/nrf51.config
+++ b/arch/nrf51/nrf51.config
@@ -16,4 +16,34 @@
   desc Support for nRF51822 microcontrollers
   parent CONFIG_ARCH_NRF51
   depend CONFIG_CPU_ARM32M_CORTEXM0
+  require CONFIG_NRF51_HFCLK_XTAL_FREQ
+  single CONFIG_NRF51_LFCLK_XOSC CONFIG_NRF51_LFCLK_SYNTH CONFIG_NRF51_LFCLK_RC
+%config end
+
+%init INIT_NRF51_CLOCK_INIT
+  parent CONFIG_ARCH_NRF51
+  during INIT_BOOTSTRAP
+  before INIT_MEMORY
+  function nrf51_clock_init
+%init end
+
+%config CONFIG_NRF51_HFCLK_XTAL_FREQ 16
+  desc nRF51 High frequency clock frequency (MHz)
+  parent CONFIG_ARCH_NRF51
+  flags value
+%config end
+
+%config CONFIG_NRF51_LFCLK_XOSC
+  desc nRF51 Low frequency clock is 32.768KHz external christal
+  parent CONFIG_ARCH_NRF51
+%config end
+
+%config CONFIG_NRF51_LFCLK_SYNTH
+  desc nRF51 Low frequency clock is derived from HF clock
+  parent CONFIG_ARCH_NRF51
+%config end
+
+%config CONFIG_NRF51_LFCLK_RC
+  desc nRF51 Low frequency clock is internal RC
+  parent CONFIG_ARCH_NRF51
 %config end
