arch/nrf51: Add GPIO driver

--- a/arch/nrf51/drivers/drivers.config
+++ b/arch/nrf51/drivers/drivers.config
@@ -5,3 +5,31 @@
   parent CONFIG_ARCH_NRF51
   flags auto
 %config end
+
+# GPIO
+
+%config CONFIG_DRIVER_NRF51_GPIO
+  desc Enable nRF51 GPIO driver
+  parent CONFIG_ARCH_NRF51
+  depend CONFIG_DEVICE_GPIO
+%config end
+
+%config CONFIG_DRIVER_NRF51_GPIO_ICU
+  desc Enable nRF51 GPIO driver
+  parent CONFIG_ARCH_NRF51
+  depend CONFIG_DEVICE_ICU
+  depend CONFIG_DEVICE_IRQ
+%config end
+
+%config CONFIG_DRIVER_NRF51_GPIO_INPUT_RANGE
+  desc Enable nRF51 GPIO driver
+  parent CONFIG_DRIVER_NRF51_GPIO_ICU
+%config end
+
+%config CONFIG_DRIVER_NRF51_GPIO_PWM
+  desc Enable nRF51 GPIO PWM driver
+  parent CONFIG_ARCH_NRF51
+  depend CONFIG_DEVICE_PWM
+  depend CONFIG_DEVICE_IRQ
+  depend CONFIG_DRIVER_NRF51_PPI
+%config end
