--- a/arch/nrf5x/drivers/drivers.config
+++ b/arch/nrf5x/drivers/drivers.config
@@ -43,3 +43,42 @@
   desc nRF5x Low frequency clock is 32.768KHz external christal
   parent CONFIG_ARCH_NRF5X
 %config end
+
+# GPIO
+
+%config CONFIG_DRIVER_NRF5X_GPIO
+  desc Enable nRF5x GPIO driver
+  parent CONFIG_ARCH_NRF5X
+  depend CONFIG_DEVICE_GPIO
+%config end
+
+%config CONFIG_DRIVER_NRF5X_GPIO_ICU_CHANNEL_COUNT
+  desc Enable nRF5x GPIO IRQ routing
+  parent CONFIG_DRIVER_NRF5X_GPIO
+  flags value
+  default 0
+  range [0,4]
+%config end
+
+%config CONFIG_DRIVER_NRF5X_GPIO_ICU
+  desc Enable nRF5x GPIO IRQ routing
+  parent CONFIG_DRIVER_NRF5X_GPIO
+  depend CONFIG_DEVICE_ICU
+  depend CONFIG_DEVICE_IRQ
+  when CONFIG_DRIVER_NRF5X_GPIO_ICU_CHANNEL_COUNT>0
+%config end
+
+%config CONFIG_DRIVER_NRF5X_GPIO_PPI_COUNT
+  desc nRF5x GPIO PPI channel count
+  parent CONFIG_DRIVER_NRF5X_GPIO
+  flags value
+  provide CONFIG_DRIVER_NRF5X_PPI_ENUM
+  default CONFIG_DRIVER_NRF5X_GPIO_ICU_CHANNEL_COUNT
+%config end
+
+%config CONFIG_DRIVER_NRF5X_GPIO_INPUT_RANGE
+  desc Enable nRF5x GPIO driver
+  parent CONFIG_DRIVER_NRF5X_GPIO
+  depend CONFIG_DEVICE_ICU
+  depend CONFIG_DEVICE_IRQ
+%config end
