arch/nrf5x: Add UART driver

--- a/arch/nrf5x/drivers/Makefile
+++ b/arch/nrf5x/drivers/Makefile
@@ -1,3 +1,5 @@
 objs += clock.o
 objs-$(CONFIG_DRIVER_NRF5X_GPIO) += gpio.o
 objs-$(CONFIG_DRIVER_NRF5X_GPIO_PWM) += gpio_pwm.o
+objs-$(CONFIG_DRIVER_NRF5X_UART) += uart.o
+objs-$(CONFIG_DRIVER_NRF5X_PRINTK) += printk.o
