arch/nrf5x: Add UART driver

--- a/arch/nrf5x/drivers/drivers.config
+++ b/arch/nrf5x/drivers/drivers.config
@@ -113,3 +113,48 @@
   provide CONFIG_DRIVER_NRF5X_PPI_ENUM
   default CONFIG_DRIVER_NRF5X_GPIO_PWM_CHANNEL_COUNT*2
 %config end
+
+# UART
+
+%config CONFIG_DRIVER_NRF5X_UART
+  desc Enable nRF5x UART driver
+  parent CONFIG_ARCH_NRF5X
+  depend CONFIG_DEVICE_IOMUX
+  depend CONFIG_DEVICE_CHAR
+  depend CONFIG_DEVICE_IRQ
+%config end
+
+%config CONFIG_DRIVER_NRF5X_UART_SWFIFO
+  desc Size of the software FIFO.
+  parent CONFIG_DRIVER_NRF5X_UART
+  flags value
+  default 32
+  range [1,64]
+%config end
+
+# printk() output
+
+%config CONFIG_DRIVER_NRF5X_PRINTK
+  desc Pin to use for UART console output
+  parent CONFIG_ARCH_NRF5X
+  provide CONFIG_MUTEK_PRINTK_HANDLER
+%config end
+
+%init INIT_DRIVER_NRF5X_PRINTK
+  parent CONFIG_DRIVER_NRF5X_PRINTK
+  during INIT_MUTEK_PRINTK
+  function nrf5x_printk_init
+%init end
+
+%config CONFIG_DRIVER_NRF5X_PRINTK_PIN
+  desc Pin to use for UART console output
+  parent CONFIG_DRIVER_NRF5X_PRINTK
+  flags value
+%config end
+
+%config CONFIG_DRIVER_NRF5X_PRINTK_RATE
+  desc Baudrate to use for UART console output
+  parent CONFIG_DRIVER_NRF5X_PRINTK
+  flags value
+  default 1000000
+%config end
