arch/nrf51: Add UART driver

--- a/arch/nrf51/drivers/Makefile
+++ b/arch/nrf51/drivers/Makefile
@@ -1,2 +1,4 @@
 objs-$(CONFIG_DRIVER_NRF51_PPI) += ppi.o
 objs-$(CONFIG_DRIVER_NRF51_GPIO) += gpio.o
+objs-$(CONFIG_DRIVER_NRF51_UART) += uart.o
+objs-$(CONFIG_DRIVER_NRF51_PRINTK) += printk.o
