--- a/arch/nrf51/drivers/drivers.config
+++ b/arch/nrf51/drivers/drivers.config
@@ -33,3 +33,48 @@
   depend CONFIG_DEVICE_IRQ
   depend CONFIG_DRIVER_NRF51_PPI
 %config end
+
+# UART
+
+%config CONFIG_DRIVER_NRF51_UART
+  desc Enable nRF51 UART driver
+  parent CONFIG_ARCH_NRF51
+  depend CONFIG_DEVICE_IOMUX
+  depend CONFIG_DEVICE_CHAR
+  depend CONFIG_DEVICE_IRQ
+%config end
+
+%config CONFIG_DRIVER_NRF51_UART_SWFIFO
+  desc Size of the software FIFO.
+  parent CONFIG_DRIVER_NRF51_UART
+  flags value
+  default 32
+  range [1,64]
+%config end
+
+# printk() output
+
+%config CONFIG_DRIVER_NRF51_PRINTK
+  desc Pin to use for UART console output
+  parent CONFIG_ARCH_NRF51
+  provide CONFIG_MUTEK_PRINTK_HANDLER
+%config end
+
+%init INIT_DRIVER_NRF51_PRINTK
+  parent CONFIG_DRIVER_NRF51_PRINTK
+  during INIT_MUTEK_PRINTK
+  function nrf51_printk_init
+%init end
+
+%config CONFIG_DRIVER_NRF51_PRINTK_PIN
+  desc Pin to use for UART console output
+  parent CONFIG_DRIVER_NRF51_PRINTK
+  flags value
+%config end
+
+%config CONFIG_DRIVER_NRF51_PRINTK_RATE
+  desc Baudrate to use for UART console output
+  parent CONFIG_DRIVER_NRF51_PRINTK
+  flags value
+  default 1000000
+%config end
