arch/nrf5x: Add I2C driver

--- a/arch/nrf5x/drivers/drivers.config
+++ b/arch/nrf5x/drivers/drivers.config
@@ -115,6 +115,16 @@
   default CONFIG_DRIVER_NRF5X_GPIO_PWM_CHANNEL_COUNT*2
 %config end
 
+# I2C
+
+%config CONFIG_DRIVER_NRF5X_I2C
+  desc Enable nRF5x I2C driver
+  parent CONFIG_ARCH_NRF5X
+  depend CONFIG_DEVICE_IOMUX
+  depend CONFIG_DEVICE_I2C
+  depend CONFIG_DEVICE_IRQ
+%config end
+
 # UART
 
 %config CONFIG_DRIVER_NRF5X_UART
