arch/nrf51: Add I2C driver

--- a/arch/nrf51/drivers/drivers.config
+++ b/arch/nrf51/drivers/drivers.config
@@ -34,6 +34,16 @@
   depend CONFIG_DRIVER_NRF51_PPI
 %config end
 
+# I2C
+
+%config CONFIG_DRIVER_NRF51_I2C
+  desc Enable nRF51 I2C driver
+  parent CONFIG_ARCH_NRF51
+  depend CONFIG_DEVICE_IOMUX
+  depend CONFIG_DEVICE_I2C
+  depend CONFIG_DEVICE_IRQ
+%config end
+
 # UART
 
 %config CONFIG_DRIVER_NRF51_UART
