arch/nrf5x: Add SPI driver

--- a/arch/nrf5x/drivers/Makefile
+++ b/arch/nrf5x/drivers/Makefile
@@ -3,4 +3,5 @@ objs-$(CONFIG_DRIVER_NRF5X_GPIO) += gpio.o
 objs-$(CONFIG_DRIVER_NRF5X_GPIO_PWM) += gpio_pwm.o
 objs-$(CONFIG_DRIVER_NRF5X_UART) += uart.o
 objs-$(CONFIG_DRIVER_NRF5X_PRINTK) += printk.o
+objs-$(CONFIG_DRIVER_NRF5X_SPI) += spi.o
 objs-$(CONFIG_DRIVER_NRF5X_I2C) += i2c.o
