--- a/arch/nrf5x/drivers/drivers.config
+++ b/arch/nrf5x/drivers/drivers.config
@@ -124,6 +124,16 @@
   depend CONFIG_DEVICE_IRQ
 %config end
 
+# SPI
+
+%config CONFIG_DRIVER_NRF5X_SPI
+  desc Enable nRF5x SPI driver
+  parent CONFIG_ARCH_NRF5X
+  depend CONFIG_DEVICE_IOMUX
+  depend CONFIG_DEVICE_SPI
+  depend CONFIG_DEVICE_IRQ
+%config end
+
 # UART
 
 %config CONFIG_DRIVER_NRF5X_UART
