arch/nrf51: Add SPI driver

--- a/arch/nrf51/drivers/drivers.config
+++ b/arch/nrf51/drivers/drivers.config
@@ -44,6 +44,16 @@
   depend CONFIG_DEVICE_IRQ
 %config end
 
+# SPI
+
+%config CONFIG_DRIVER_NRF51_SPI
+  desc Enable nRF51 SPI driver
+  parent CONFIG_ARCH_NRF51
+  depend CONFIG_DEVICE_IOMUX
+  depend CONFIG_DEVICE_SPI
+  depend CONFIG_DEVICE_IRQ
+%config end
+
 # UART
 
 %config CONFIG_DRIVER_NRF51_UART
