--- a/arch/nrf51/drivers/Makefile
+++ b/arch/nrf51/drivers/Makefile
@@ -2,4 +2,5 @@ objs-$(CONFIG_DRIVER_NRF51_PPI) += ppi.o
 objs-$(CONFIG_DRIVER_NRF51_GPIO) += gpio.o
 objs-$(CONFIG_DRIVER_NRF51_UART) += uart.o
 objs-$(CONFIG_DRIVER_NRF51_PRINTK) += printk.o
+objs-$(CONFIG_DRIVER_NRF51_SPI) += spi.o
 objs-$(CONFIG_DRIVER_NRF51_I2C) += i2c.o
