--- a/arch/nrf51/drivers/Makefile
+++ b/arch/nrf51/drivers/Makefile
@@ -4,3 +4,4 @@ objs-$(CONFIG_DRIVER_NRF51_UART) += uart.o
 objs-$(CONFIG_DRIVER_NRF51_PRINTK) += printk.o
 objs-$(CONFIG_DRIVER_NRF51_SPI) += spi.o
 objs-$(CONFIG_DRIVER_NRF51_I2C) += i2c.o
+objs-$(CONFIG_DRIVER_NRF51_RTC) += rtc.o
