--- a/arch/nrf51/drivers/drivers.config
+++ b/arch/nrf51/drivers/drivers.config
@@ -44,6 +44,15 @@
   depend CONFIG_DEVICE_IRQ
 %config end
 
+# RTC
+
+%config CONFIG_DRIVER_NRF51_RTC
+  desc Enable nRF51 RTC driver
+  parent CONFIG_ARCH_NRF51
+  depend CONFIG_DEVICE_TIMER
+  depend CONFIG_DEVICE_IRQ
+%config end
+
 # SPI
 
 %config CONFIG_DRIVER_NRF51_SPI
