arch/nrf5x: Add RTC driver

--- a/arch/nrf5x/drivers/drivers.config
+++ b/arch/nrf5x/drivers/drivers.config
@@ -125,6 +125,15 @@
   depend CONFIG_DEVICE_IRQ
 %config end
 
+# RTC
+
+%config CONFIG_DRIVER_NRF5X_RTC
+  desc Enable nRF5x RTC driver
+  parent CONFIG_ARCH_NRF5X
+  depend CONFIG_DEVICE_TIMER
+  depend CONFIG_DEVICE_IRQ
+%config end
+
 # SPI
 
 %config CONFIG_DRIVER_NRF5X_SPI
