arch/nrf51: Add support for PCA10024 board (nRF51822-mKIT)

--- a/arch/nrf51/board/Makefile
+++ b/arch/nrf51/board/Makefile
@@ -1,2 +1,3 @@
 objs-$(CONFIG_NRF51_PCA10000) += pca10000.o
 objs-$(CONFIG_NRF51_PCA10005) += pca10005.o
+objs-$(CONFIG_NRF51_PCA10024) += pca10024.o
