--- a/arch/nrf51/board/board.config
+++ b/arch/nrf51/board/board.config
@@ -9,3 +9,9 @@
   parent CONFIG_ARCH_NRF51
   depend CONFIG_NRF51_822
 %config end
+
+%config CONFIG_NRF51_PCA10024
+  desc nRF51 support for nRF51822-mKIT
+  parent CONFIG_ARCH_NRF51
+  depend CONFIG_NRF51_822
+%config end
