arch/nrf5x: Add support for PCA10024 (nRF51822-mKIT)

--- a/arch/nrf5x/board/board.config
+++ b/arch/nrf5x/board/board.config
@@ -7,3 +7,8 @@
   desc Support for nRF51822-DK with SMA connector
   parent CONFIG_ARCH_NRF51
 %config end
+
+%config CONFIG_NRF5X_PCA10024
+  desc Support for nRF51822-mKIT
+  parent CONFIG_ARCH_NRF51
+%config end
