--- a/arch/nrf5x/board/Makefile
+++ b/arch/nrf5x/board/Makefile
@@ -1,2 +1,3 @@
 objs-$(CONFIG_NRF5X_PCA10000) += pca10000.o
 objs-$(CONFIG_NRF5X_PCA10005) += pca10005.o
+objs-$(CONFIG_NRF5X_PCA10024) += pca10024.o
