arch/nrf51: Add radio driver

--- a/arch/nrf51/drivers/drivers.config
+++ b/arch/nrf51/drivers/drivers.config
@@ -173,3 +173,18 @@
   desc nRF51 Low frequency clock is 32.768KHz external christal
   parent CONFIG_ARCH_NRF51
 %config end
+
+# Radio
+
+%config CONFIG_DRIVER_NRF51_BLE_RADIO
+  desc Enable nRF51 Radio driver
+  parent CONFIG_ARCH_NRF51
+  depend CONFIG_DEVICE_BLE_RADIO
+  depend CONFIG_BLE
+  depend CONFIG_DEVICE_IRQ
+%config end
+
+%config CONFIG_DRIVER_NRF51_BLE_RADIO_DCDC
+  desc Enable nRF51 Radio DCDC
+  parent CONFIG_DRIVER_NRF51_BLE_RADIO
+%config end
