gct: fix compile undefined symbol when noopt config is used

--- a/gct/Makefile
+++ b/gct/Makefile
@@ -4,5 +4,11 @@ header_raw = $(wildcard $(LOCAL_SRC_DIR)/gct/include/gct/*.h)
 pre_headers = $(subst $(LOCAL_SRC_DIR)/gct/,,$(header_sources:.t=.h))
 copy = $(subst $(LOCAL_SRC_DIR)/gct/,,$(header_raw))
 
-objs = libgct.o
+ifeq ($(CONFIG_COMPILE_OPTIMIZE), 0)
+objs = libgct-mutek.o
+else
+objs =
+endif
+
+objs += libgct.o
 
