--- a/libdevice/device.config
+++ b/libdevice/device.config
@@ -352,6 +352,7 @@
   parent CONFIG_DEVICE
   flags auto
   desc Enable PWM devices support
+  depend CONFIG_MUTEK_KROUTINE_TRIGGER
 %config end
 
 %config CONFIG_DEVICE_SHELL
