arch/nrf5x: Add support for PCA20002 (nRF51 Smart Remote CPU board)

--- a/arch/nrf5x/board/board.config
+++ b/arch/nrf5x/board/board.config
@@ -12,3 +12,8 @@
   desc Support for nRF51822-mKIT
   parent CONFIG_ARCH_NRF51
 %config end
+
+%config CONFIG_NRF5X_PCA20002
+  desc Support for nRF51 Smart Remote module
+  parent CONFIG_ARCH_NRF51
+%config end
