arch/nrf51: Add support for PCA20002 board (Smart Remote CPU board)

--- a/arch/nrf51/board/Makefile
+++ b/arch/nrf51/board/Makefile
@@ -1,3 +1,4 @@
 objs-$(CONFIG_NRF51_PCA10000) += pca10000.o
 objs-$(CONFIG_NRF51_PCA10005) += pca10005.o
 objs-$(CONFIG_NRF51_PCA10024) += pca10024.o
+objs-$(CONFIG_NRF51_PCA20002) += pca20002.o
