--- a/arch/nrf51/board/board.config
+++ b/arch/nrf51/board/board.config
@@ -15,3 +15,9 @@
   parent CONFIG_ARCH_NRF51
   depend CONFIG_NRF51_822
 %config end
+
+%config CONFIG_NRF51_PCA20002
+  desc nRF51 support for Smart Remote module
+  parent CONFIG_ARCH_NRF51
+  depend CONFIG_NRF51_822
+%config end
