libdevice: Add Valio class

--- a/libdevice/device.config
+++ b/libdevice/device.config
@@ -209,6 +209,12 @@
   desc Enable I2C device support
 %config end
 
+%config CONFIG_DEVICE_VALIO
+  parent CONFIG_DEVICE
+  flags auto
+  desc Enable attribute devices support
+%config end
+
 %config CONFIG_DEVICE_MEM
   parent CONFIG_DEVICE
   flags auto
