--- a/drivers/Makefile
+++ b/drivers/Makefile
@@ -1,5 +1,5 @@
 
 DIR_CFLAGS = -D_HEXO_INTTYPES_DEPRECATED
 
-subdirs = block char enum fb input net sound timer spi lcd gpio i2c mem
+subdirs = block char enum fb input net sound timer spi lcd gpio mem
 
