drivers: Add DS3231 I2C RTC (Calendar clock) driver

--- a/drivers/valio/valio.config
+++ b/drivers/valio/valio.config
@@ -3,3 +3,9 @@
   desc Enable MTCH6102 Touchpad ValIO driver
   depend CONFIG_DEVICE_VALIO
 %config end
+
+%config CONFIG_DRIVER_DS3231
+  parent CONFIG_DRIVER
+  desc Enable DS3231 Calendar Clock ValIO driver
+  depend CONFIG_DEVICE_VALIO
+%config end
