drivers: Cleanup empty directories

--- a/drivers/Makefile
+++ b/drivers/Makefile
@@ -1,5 +1,11 @@
-
 DIR_CFLAGS = -D_HEXO_INTTYPES_DEPRECATED
 
-subdirs = block char enum fb input net sound timer spi lcd gpio mem
-
+subdirs = \
+block \
+char \
+enum \
+gpio \
+lcd \
+mem \
+spi \
+timer
